[package]
name = "rtps_parser"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "RTPS protocol parser library in pure Rust"
repository = "https://github.com/hydroid7/rtps-parser"
readme = "README.md"
keywords = ["rtps", "dds", "parser", "network", "protocol"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
dust_dds = "0.6.0"
